# synesis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPERS.md  MANIFEST.in  PUBLISHING.md  README.md  SETUP_SUMMARY.md  TESTPYPI_GUIDE.md  build.bat  build.sh  check_ready.py  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
synesis/: __init__.py  api.py  cli.py  compiler.py  error_handler.py  lsp_adapter.py
synesis/ast/: nodes.py  results.py
synesis/exporters/: __init__.py  csv_export.py  json_export.py  xls_export.py
synesis/grammar/: synesis.lark
synesis/parser/: bib_loader.py  error_handler.py  lexer.py  template_loader.py  transformer.py
synesis/semantic/: linker.py  validator.py
tests/: conftest.py  test_api.py  test_cache_integration.py  test_error_handler.py  test_error_handler_structural.py  test_exporters.py  test_linker.py  test_lsp_adapter.py  test_parser.py  test_validator.py
tests/fixtures/: energy.synt  minimal.synt
tests/fixtures/invalid_semantic/: invalid_chain.syn  invalid_required.syn
tests/fixtures/invalid_syntax/: invalid_token.syn  unclosed_block.syn
tests/fixtures/valid_project/: project.synp  references.bib  template.synt
tests/fixtures/valid_project/annotations/: sample.syn
tests/fixtures/valid_project/ontologies/: ontology.syno
