[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synesis"
version = "0.2.9"
description = "The confluence of information into intelligence - A DSL compiler that transforms qualitative research annotations into canonical knowledge structures"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "De Britto, Christian Maciel", email = "chriseana@gmail.com"}
]
maintainers = [
    {name = "Synesis Language Organization", email = "synesis-lang@users.noreply.github.com"}
]
keywords = [
    "qualitative-research",
    "compiler",
    "dsl",
    "domain-specific-language",
    "bibliometrics",
    "annotation",
    "research-tools",
    "bibtex",
    "ontology"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
dependencies = [
    "lark >= 1.1",
    "bibtexparser >= 1.4",
    "regex >= 2023.0.0",
    "click >= 8.0",
    "openpyxl >= 3.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
    "build >= 0.10",
    "twine >= 4.0",
]

[project.urls]
Homepage = "https://synesis-lang.github.io/synesis-docs"
Documentation = "https://synesis-lang.github.io/synesis-docs"
Repository = "https://github.com/synesis-lang/synesis"
Issues = "https://github.com/synesis-lang/synesis/issues"
Changelog = "https://github.com/synesis-lang/synesis/blob/main/CHANGELOG.md"

[project.scripts]
synesis = "synesis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["synesis*"]
exclude = ["out_dir*", "davi_pesquisa*", "bibliometrics*", "examples*"]
